# snake-royale-showdown

./: .gitignore  README.md  index.html  openapi.yaml  start.sh  tailwind.config.ts
backend/: README.md  __init__.py  app.py  database.py  db.py  main.py  models.py  pyproject.toml  routes.py  schemas.py
backend/tests/: test_api.py
backend/tests_integration/: test_integration.py
frontend/: index.html  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: api.test.ts  gameEngine.test.ts
frontend/src/components/: GameGrid.tsx
frontend/src/hooks/: useGameEngine.ts
frontend/src/pages/: GameLobby.tsx  LiveGames.tsx
frontend/src/services/: api.ts  gameRooms.ts
src/: App.tsx
src/components/: GameGrid.tsx
src/hooks/: useGameEngine.ts
src/pages/: Auth.tsx  Dashboard.tsx  Game.tsx  Leaderboard.tsx
src/types/: game.ts
