[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi>=0.100.0",
	"uvicorn[standard]>=0.22.0",
	"pydantic>=2.5.0",
	"python-jose>=3.3.0",
	"pytest>=7.0.0",
	"httpx>=0.24.0",
	"pytest-asyncio>=0.21.0",
	"email-validator>=2.3.0",
]
